Complete page Detail Milktea, re-edit database, fix create order

--- a/AppMilkteaShop/app/src/main/res/values/strings.xml
+++ b/AppMilkteaShop/app/src/main/res/values/strings.xml
@@ -1,4 +1,17 @@
 <resources>
     <string name="app_name">AppMilkteaShop</string>
     <string name="ResendOtp"><u><b><i>Resend OTP Code</i></b></u></string>
+
+    <string-array name="size_array">
+        <item>M</item>
+        <item>L</item>
+        <item>XL</item>
+    </string-array>
+
+    <string-array name="amount_array">
+        <item>100%</item>
+        <item>70%</item>
+        <item>50%</item>
+        <item>30%</item>
+    </string-array>
 </resources>
